--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node config/server.js",
+    "start": "nodemon --exec babel-node config/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
