--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "nyc --repoter=html --repoter=text mocha --no-colors --require @babel/register --require babel-polyfill tests/*.js --exit",
+    "test": "nyc --repoter=html --repoter=text mocha --require @babel/register --require babel-polyfill tests/*.js --exit",
     "cover": "nyc --reporter=text npm test",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -21,22 +22,28 @@
   },
   "homepage": "https://github.com/alainburindi/Epic_Mail#readme",
   "devDependencies": {
-    
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "coveralls": "^3.0.3",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
