--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language : node_js
 node_js : 
 - v10.6.0
 after_success : npm run coverage
+env:
+  global:
+  - NODE_ENV="development"
+  - TOKEN_KEY ="alainsecretkey"
