--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "jsonwebtoken": "^8.5.0",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "pg": "^7.9.0"
   },
   "engines": {
     "node": "10.6.0",
