--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "nyc --repoter=html --repoter=text mocha --require @babel/register --require babel-polyfill test/v2/*.js --exit",
+    "test": "nyc --repoter=html --repoter=text mocha --require @babel/register --require babel-polyfill test/*.js --exit",
     "cover": "nyc --reporter=text npm test",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint ./"
