--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcrypt": "^3.0.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "cors": "^2.8.5",
     "coveralls": "^3.0.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -49,7 +50,7 @@
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0",
-    "pg": "^7.9.0"
+    "pg": "^7.10.0"
   },
   "engines": {
     "node": "10.6.0",
